tests/snapshots/files__shared_snapshot_container_fail.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
((b 1)
 (k 1)
 (l 1)
 (p 1)
 (w 0))
