tests/snapshots/files__shared_snapshot_container_rebuild.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
(extraction-costs 5)
(extraction-costs 4)
()
