tests/snapshots/files__shared_snapshot_container_set_collapse.snap
---
source: tests/files.rs
assertion_line: 88
expression: snapshot_content_across_treatments
---
(let prf_0 (Fiat (= (B) (A))))
(let t_1 (Holds (set-of (A) (B))))
(let prf_2
  (Congr
            (= t_1 (Holds (set-of (A))))
            (Fiat (= t_1 t_1))
            (ContainerNormalize
              (= (set-of (A) (B)) (set-of (A)))
              (Congr
                (= (set-of (A) (B)) (set-of (A) (A)))
                (Fiat (= (set-of (A) (B)) (set-of (A) (B))))
                prf_0
                1))
            0))
(Rule
  (= (@ExistsConstructor_598) (@ExistsConstructor_598))
  (name "@prove_exists_rule_600")
  (premises
    (Fiat (= (A) (A)))
    prf_0
    (Eval)
    prf_0
    (Eval)
    (Trans
      (= (Holds (set-of (A))) (Holds (set-of (A))))
      (Sym (= (Holds (set-of (A))) t_1) prf_2)
      prf_2))
  (substitution
    (@v_603 (set-of (A)))
    (@v_602 (A))
    (@v_604 (A))
    (@v_605 (set-of (A)))
    (@v_601 (A))))
((A 1)
 (B 1)
 (Holds 1))
