tests/snapshots/files__shared_snapshot_eggcc_2mm.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
((Abs 1)
 (Accum-Bop 3)
 (Add 1)
 (Add-All-Gets 1327)
 (Add-Gets 6122)
 (AddContext 2024)
 (AddContextList 0)
 (AddIntInterval 0)
 (AddIntIntervalToAll 0)
 (AddIntIntervalToPtrPointees 0)
 (AddIntOrInfinity 0)
 (All<PointsNowhere-PtrPointees> 0)
 (Alloc 6)
 (And 1)
 (Append 0)
 (Arg 24)
 (At-List<PtrPointees> 0)
 (At-List<i64+IntInterval> 0)
 (Base 5)
 (BaseTypeToPtrPointees 0)
 (BinaryOpIsPure 28)
 (Bitand 1)
 (BodyContainsExpr 14785)
 (BodyContainsListExpr 0)
 (Bool 1)
 (BoolB 1)
 (BoolT 1)
 (Bop 195)
 (Call 4)
 (Concat 4211)
 (Concat-List<PtrPointees> 0)
 (Concat-List<i64+IntInterval> 0)
 (Cons 0)
 (Cons-List<PtrPointees> 0)
 (Cons-List<i64+IntInterval> 0)
 (ConsIfNonEmpty 0)
 (Const 299)
 (ContextOf 4309)
 (DUMMYCTX 1)
 (Dead 0)
 (DebugExpr 0)
 (DelayedDropUnion 0)
 (DelayedSubstUnion 0)
 (DemandAt-List<PtrPointees> 0)
 (DemandAt-List<i64+IntInterval> 0)
 (DemandDontAlias 0)
 (DidMemOptimization 0)
 (Div 1)
 (DoWhile 29)
 (DontAlias 0)
 (DropAt 0)
 (DropAtInternal 0)
 (DummyLoopContext 0)
 (ES 0)
 (Empty 0)
 (Eq 1)
 (ExpectType 286)
 (Expr-size 4319)
 (ExprIsPure 1808)
 (ExprIsResolved 4319)
 (ExprIsValid 0)
 (ExprSet-insert 0)
 (ExprSet-intersect 0)
 (ExprSet-length 0)
 (ExprSet-union 0)
 (ExtractedExpr 2085)
 (ExtractedExprCache 2091)
 (FAdd 1)
 (FDiv 1)
 (FEq 1)
 (FGreaterEq 1)
 (FGreaterThan 1)
 (FLessEq 1)
 (FLessThan 1)
 (FMul 1)
 (FSub 1)
 (Float 10)
 (FloatT 1)
 (Fmax 1)
 (Fmin 1)
 (Free 1)
 (Function 10)
 (FunctionHasType 10)
 (Get 3084)
 (GetPointees 0)
 (GreaterEq 1)
 (GreaterThan 1)
 (HasArgType 4309)
 (HasType 4309)
 (I 0)
 (IVTAnalysisRes 0)
 (IVTMin 0)
 (IVTNewInputsAnalysis 0)
 (IVTNewInputsAnalysisDemand 0)
 (IVTNewInputsAnalysisImpl 0)
 (If 26)
 (IfNode 0)
 (IfSubst 0)
 (InFunc 2)
 (InIf 0)
 (InLoop 0)
 (InSwitch 0)
 (Infinity 0)
 (InlinedCall 0)
 (Int 11)
 (IntB 11)
 (IntIntervalValid 0)
 (IntT 1)
 (Intersect-List<i64+IntInterval> 0)
 (Intersect-PtrPointees 0)
 (IntersectHelper-List<i64+IntInterval> 0)
 (IntersectIntInterval 0)
 (IntersectPointees 0)
 (InvCodeMotionCandidate 0)
 (IsEmpty-List<PtrPointees> 0)
 (IsEmpty-List<i64+IntInterval> 0)
 (IsIsEven 0)
 (IsNonEmpty-List<PtrPointees> 0)
 (IsNonEmpty-List<i64+IntInterval> 0)
 (Length-List<PtrPointees> 0)
 (Length-List<i64+IntInterval> 0)
 (LessEq 1)
 (LessThan 1)
 (ListExpr-ith 0)
 (ListExpr-length 0)
 (ListExpr-size 0)
 (ListExpr-suffix 0)
 (ListExprIsPure 0)
 (ListExprIsResolved 0)
 (ListExprIsValid 0)
 (Load 1)
 (LoopNumItersGuess 29)
 (MaxIntOrInfinity 0)
 (MinIntOrInfinity 0)
 (MkIntInterval 0)
 (Mul 1)
 (MyFalse 0)
 (MyTrue 0)
 (NTZIterations 0)
 (Neg 1)
 (NegInfinity 0)
 (Nil 0)
 (Nil-List<PtrPointees> 0)
 (Nil-List<i64+IntInterval> 0)
 (NoAlias 0)
 (NoTerm 1)
 (Not 1)
 (Not-Just-Concat 296)
 (Or 1)
 (PointeesDropFirst 0)
 (PointerT 1)
 (PointerishType 262)
 (PointerishTypeList 261)
 (PointsAnywhere 0)
 (PointsNowhere 0)
 (PointsNowhere-PtrPointees 0)
 (PointsTo 0)
 (PointsToCells 0)
 (PointsToCellsAtIter 0)
 (PointsToExpr 0)
 (PotentialExtractedExpr 5003)
 (Print 1)
 (Program 0)
 (PtrAdd 1)
 (PtrPointsTo 0)
 (PureBaseType 2)
 (PureType 7)
 (PureTypeList 6)
 (RELIESONCONTEXT 0)
 (Resolved-IntInterval 0)
 (Resolved-IntOrInfinity 0)
 (Resolved-List<PtrPointees> 0)
 (Resolved-List<i64+IntInterval> 0)
 (Resolved-Pointees 0)
 (Resolved-PtrPointees 0)
 (Rev-List<PtrPointees> 0)
 (Rev-List<i64+IntInterval> 0)
 (RevConcat-List<PtrPointees> 0)
 (RevConcat-List<i64+IntInterval> 0)
 (Select 1)
 (Shl 1)
 (Shr 1)
 (Single 957)
 (Smaller 1803)
 (Smax 1)
 (Smin 1)
 (StateT 1)
 (Sub 1)
 (SubTuple 6284)
 (Subst 0)
 (SuffixAt-List<PtrPointees> 0)
 (SuffixAt-List<i64+IntInterval> 0)
 (Switch 0)
 (TCPair 2741)
 (TCons 318)
 (TLConcat 1649)
 (TNil 1)
 (TermAlloc 0)
 (TermArg 1)
 (TermBop 134)
 (TermCall 0)
 (TermConcat 1904)
 (TermCons 0)
 (TermConst 22)
 (TermEmpty 0)
 (TermGet 487)
 (TermNil 0)
 (TermSingle 113)
 (TermSubst 107)
 (TermTop 79)
 (TermUop 0)
 (TernaryOpIsPure 1)
 (TmpType 0)
 (ToSubsumeIf 0)
 (Top 98)
 (TuplePointsTo 0)
 (TupleRemoveAt 0)
 (TupleT 318)
 (TypeList-ith 1797)
 (TypeList-length 319)
 (TypeListRemoveAt 0)
 (TypeListToList<PtrPointees> 0)
 (TypeToPointees 0)
 (UnaryOpIsPure 3)
 (Union-List<i64+IntInterval> 0)
 (Union-PtrPointees 0)
 (UnionHelper-List<i64+IntInterval> 0)
 (UnionIntInterval 0)
 (UnionPointees 0)
 (UnwrapPtrPointsTo 0)
 (UnwrapTuplePointsTo 0)
 (Uop 0)
 (Write 1)
 (Zip<Intersect-PtrPointees> 0)
 (Zip<Union-PtrPointees> 0)
 (_GeneratedFreshTable3501 0)
 (_GeneratedFreshTable3561 0)
 (_GeneratedFreshTable3607 0)
 (_GeneratedFreshTable3796 0)
 (_GeneratedFreshTable3985 0)
 (_GeneratedFreshTable4294 0)
 (bop->string 24)
 (bop-of-type 9)
 (bound-max 10)
 (bound-min 0)
 (bpred-of-type 12)
 (hi-bound 164)
 (is-inv-Expr 995)
 (is-inv-ListExpr 0)
 (is-inv-ListExpr-helper 0)
 (leading-Expr 143)
 (leading-Expr-list 0)
 (lo-bound 164)
 (lsr-inv 8671)
 (succ 0)
 (to-hoist 24)
 (to-hoist-size 24)
 (top->string 0)
 (tuple-length 3045)
 (uop->string 0))
