tests/snapshots/files__shared_snapshot_eggcc_extraction.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
((Arg <size>)
 (Body-contains-Body <size>)
 (Body-contains-Expr <size>)
 (Body-contains-Operand <size>)
 (Body-is-pure <size>)
 (BodyAndCost <size>)
 (BodyToVecOperand <size>)
 (BodyToVecOperandHelper <size>)
 (Bool <size>)
 (BoolI <size>)
 (BoolT <size>)
 (Bril <size>)
 (Call <size>)
 (Char <size>)
 (CharT <size>)
 (Const <size>)
 (Expr-is-pure <size>)
 (ExprAndCost <size>)
 (ExtractedBody <size>)
 (ExtractedExpr <size>)
 (ExtractedOperand <size>)
 (ExtractedVecOperand <size>)
 (ExtractedVecOperandHelper <size>)
 (ExtractedVecVecOperand <size>)
 (ExtractedVecVecOperandHelper <size>)
 (Float <size>)
 (FloatT <size>)
 (Func <size>)
 (Function-is-pure <size>)
 (Gamma <size>)
 (IntI <size>)
 (IntT <size>)
 (Node <size>)
 (NoneType <size>)
 (Num <size>)
 (Operand-is-pure <size>)
 (OperandAndCost <size>)
 (OperandGroup <size>)
 (PRINT <size>)
 (PassThroughArguments <size>)
 (PassThroughArgumentsHelper <size>)
 (PointerT <size>)
 (PrintState <size>)
 (Project <size>)
 (PureOp <size>)
 (ShiftBody <size>)
 (ShiftExpr <size>)
 (ShiftOperand <size>)
 (ShiftVecOperand <size>)
 (ShiftVecOperand-helper <size>)
 (ShiftVecVecOperand <size>)
 (ShiftVecVecOperand-helper <size>)
 (Smaller <size>)
 (SomeType <size>)
 (SubstBody <size>)
 (SubstBodyAll <size>)
 (SubstExpr <size>)
 (SubstExprAll <size>)
 (SubstOperand <size>)
 (SubstOperandAll <size>)
 (SubstVecOperand <size>)
 (SubstVecOperand-helper <size>)
 (SubstVecOperandAll <size>)
 (SubstVecOperandAll-helper <size>)
 (SubstVecVecOperand <size>)
 (SubstVecVecOperand-helper <size>)
 (SubstVecVecOperandAll <size>)
 (SubstVecVecOperandAll-helper <size>)
 (Theta <size>)
 (VO <size>)
 (VVO <size>)
 (VecOperand-get <size>)
 (VecOperand-is-pure <size>)
 (VecOperand-length <size>)
 (VecOperand-pure-prefix <size>)
 (VecOperandAndCost <size>)
 (VecVecOperand-get <size>)
 (VecVecOperand-is-pure <size>)
 (VecVecOperand-length <size>)
 (VecVecOperand-pure-prefix <size>)
 (VecVecOperandAndCost <size>)
 (badd <size>)
 (band <size>)
 (bdiv <size>)
 (beq <size>)
 (bfmul <size>)
 (bge <size>)
 (bgt <size>)
 (ble <size>)
 (blt <size>)
 (bmul <size>)
 (bnot <size>)
 (bor <size>)
 (bsub <size>)
 (can-subst-Body-beneath <size>)
 (can-subst-Expr-beneath <size>)
 (can-subst-Operand-beneath <size>)
 (can-subst-VecOperand-beneath <size>)
 (can-subst-VecVecOperand-beneath <size>)
 (const <size>)
 (context-ival <size>)
 (interval-intersect <size>)
 (interval-union <size>)
 (ival <size>))
