tests/snapshots/files__shared_snapshot_either.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
((late-left 1)
 (late-right 1))
